ArticleController の get /articles エンドポイントを作成 (#17)
* feat: Web アプリ全体で利用するエラー型 MyError を実装

バリデーションエラーが発生した場合、MyError.ValidationError を利用する

* build: build.gradle.kts に jqwik を記述

* feat: 作成済記事の値オブジェクト Body を作成

* feat: 作成済記事の値オブジェクト Title を作成

* feat: 作成済記事の概要の値オブジェクト Description を作成

* feat: 作成済記事の概要の値オブジェクト Slug を作成

* docs: 作成済記事一覧表示 API のレスポンスから、createdAt と updatedAt を削除

* feat: エンティティ「作成済記事」を実装

* chore: detekt の MaxLineLength と MaximumLineLength の対象からテストを除外

* feat: ArticleController.getArticle の正常系と ShowArticleUseCase を実装

* feat: ArticleController.getArticle の準正常系を実装

* feat: ShowArticleUseCase の正常系と、ArticleRepository を実装

* docs: detekt の ReturnCount の最大数を 3 に変更

* feat: 作成済記事の単一取得ユースケースの準正常系を実装

* build: DB との接続のため、spring-boot-starter-jdbc と org.postgresql:postgresql を追加

* build: database rider を導入

* chore: DB 用の Dockerfile と docker-compose.yaml を作成

* test: DB テストの接続設定を追加

* feat: ArticleRepositoryImpl の正常系を実装

* feat: ArticleRepositoryImpl の準正常系を実装

* test: get /api/articles/:slug の正常系のテストを実装

* test: MockMvc の文字コードを UTF-8 に指定

* test: get /api/articles/:slug の準正常系「slug のフォーマットが不正な場合、バリデーションエラー」を実装

* test: get /api/articles/:slug の準正常系「準正常系-slug に該当する作成済記事が存在しない場合」を実装
