# docs/openapi.yaml
@@ -51,6 +51,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MultipleArticleResponse'
+        '403':
+          description: ValidationError
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericErrorModel'
+        '404':
+          description: NotFound
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericErrorModel'
   /articles/{slug}:
     get:
       tags:
@@ -127,7 +139,7 @@ paths:
       responses:
         '200':
           description: OK
-          content: {}
+          content: { }
 
 components:
   schemas:
@@ -151,8 +163,6 @@ components:
         - body
         - description
         - title
-        - createdAt
-        - updatedAt
       type: object
       properties:
         slug:
@@ -162,10 +172,6 @@ components:
         description:
           type: string
         body:
-          type: string
-        createdAt:
-          type: string
-        updatedAt:
           type: string
     SingleArticleResponse:
       required:
